2014-02-11  Charlie Zender  <zender@uci.edu>

	* Call nco_cnk_ini() iff fl_out_fmt == netCDF4*

2014-02-10 Pedro Vicente  <pvicente@uci.edu>

	* ncwa regressions #61, #62, #63 cell_methods CF attribute convention (create, variable with several dimensions)

2014-02-10  Charlie Zender  <zender@uci.edu>

	* ncks expand smr_sng to accomodate longer filenames, summaries	(fixes SMAP breakage)

2014-02-07  Pedro Vicente  <pvicente@uci.edu>

	* ncra regression #32 cell_methods CF attribute convention (create)

2014-02-07  Charlie Zender  <zender@uci.edu>

	* Make JSON look decent

	* Change cell_methods to agree with actual method used for coordinates

	* Change ncwa behavior to comply with longstanding intent & documentation that coordinate
	variables always return averages, never extrema or other statistics.
	ncra and nces have long-implemented this convention.

2014-02-06  Pedro Vicente  <pvicente@uci.edu>

	* Add test data for cell_methods CF attribute convention

	* ncwa regression #58, #59, #60 cell_methods CF attribute convention (create average and maximum, append)

2014-02-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.2 release procedure:
 	Changes since nco-4_4_1: bugfixes for ncra.c memory, LLVM/clang builds, -X
	cd ~/nco;cvs tag -d nco-4_4_2;cvs tag -d nco-4_4_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.2 release"
	cvs tag -c nco-4_4_2;cvs tag -c nco-4_4_2-1

	* Start node printing for JSON

2014-02-05  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #89 -X and associated coordinates

2014-02-05  Charlie Zender  <zender@uci.edu>

	* Add W10N/JSON stubs

	* Improve documentation build rules in ./configure

	* Explicitly add -Wuninitialized -Wmaybe-uninitialized to GCC in bld/Makefile

2014-02-04  Charlie Zender  <zender@uci.edu>

	* Pass same Make arguments to clang/LLVM as to gcc/GCC

	* Add byte/ubyte-valued nco_var_avg_rdc_ttl()/_min()/max()
	Was bug in native-byte arithmetic but NCO usually promotes to double...
